[package]
name = "aniterm"
version = "0.1.1"
edition = "2021"
description = "Search and fetch information about anime and manga"
keywords = ["cli", "anime", "manga", "search", "kitsu"]
license = "MIT"
readme = "README.md"
authors = ["Lars Jönsson crymeat@gmail.com"]
repository = "https://github.com/devpaps/aniterm"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10.0"
reqwest = {version = "0.11.20", features = ["json"]}
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
